--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1cdb6c; }
+  background: #1430d4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #adfa9a; }
+  background: #ebced0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #152128; }
+  background: #6910cd; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8860ce; }
+  background: #635b90; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #393b85; }
+  background: #db8678; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ccf314; }
+  background: #23cd51; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4d4699; }
+  background: #62ce23; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #62caca; }
+  background: #949ee6; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e46955; }
+  background: #09bcb2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e132d4; }
+  background: #3eb5cf; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b2d7c4; }
+  background: #36efc4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e6a3fb; }
+  background: #6673fe; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d816fe; }
+  background: #129404; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d07cd7; }
+  background: #dd2ce9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #4da906; }
+  background: #0e2b13; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0fe3bc; }
+  background: #4c068e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #13ac48; }
+  background: #f034f4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #79e141; }
+  background: #123899; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #5e603e; }
+  background: #8afdb4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fe3b34; }
+  background: #7d1ff5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ed037a; }
+  background: #0ffec6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #93bdf6; }
+  background: #761714; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #3b4f1c; }
+  background: #cb9a74; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #bcd346; }
+  background: #30e244; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #cfde9c; }
+  background: #7d27f1; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6d338b; }
+  background: #18b99d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e95124; }
+  background: #01f969; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a5cbc4; }
+  background: #606572; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #84631f; }
+  background: #e2ccaa; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #21b93e; }
+  background: #9fbc3c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0c91e2; }
+  background: #4a96e1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #03c726; }
+  background: #200f7b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #fe9842; }
+  background: #07c0d2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #46ee9c; }
+  background: #936581; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #0ec6f0; }
+  background: #041694; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ea8ddd; }
+  background: #99a81d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #83c3e2; }
+  background: #9b9ac5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4825b1; }
+  background: #fd84ee; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #dd38ae; }
+  background: #d6d936; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #523056; }
+  background: #2d5833; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2192ae; }
+  background: #d9686c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9f76e9; }
+  background: #5e2667; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #177760; }
+  background: #5d6f8f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #801d6a; }
+  background: #806f23; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e599d1; }
+  background: #75708a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #eea643; }
+  background: #f7dfaa; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #cf857d; }
+  background: #c450f0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #84e0b2; }
+  background: #3ac8f1; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c63b2b; }
+  background: #2524cf; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2643a7; }
+  background: #4023e5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d84350; }
+  background: #964074; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1a08aa; }
+  background: #0b03e9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #aa4361; }
+  background: #4b7ee1; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b4614d; }
+  background: #672beb; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d03a42; }
+  background: #705299; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #07c51b; }
+  background: #2c121c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4c810e; }
+  background: #fd2da0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f90612; }
+  background: #31cde9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #507033; }
+  background: #d9b602; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9e5120; }
+  background: #acc0eb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ef3597; }
+  background: #f0990b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8b1d4e; }
+  background: #f38228; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ad0487; }
+  background: #22398e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0750ee; }
+  background: #b9f9c7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e56b0b; }
+  background: #6a2f70; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #032a2d; }
+  background: #dbdc8b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #955a8b; }
+  background: #e21ea1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c072c4; }
+  background: #24a1e3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3f3629; }
+  background: #463386; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #136ce7; }
+  background: #c9d4e8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #554c75; }
+  background: #02f473; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #420fd2; }
+  background: #456ebd; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #1e29d9; }
+  background: #229096; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #cf86d5; }
+  background: #79a56d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3e497c; }
+  background: #3669e5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #4c6a41; }
+  background: #019983; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ae1248; }
+  background: #d9c5b8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #660c6d; }
+  background: #9d4085; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #14b03f; }
+  background: #f14f8a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5bc3e2; }
+  background: #1e3df1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #99104d; }
+  background: #1c15d3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #879914; }
+  background: #36a020; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4788ec; }
+  background: #299a3f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #685190; }
+  background: #9cf8b2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #717f57; }
+  background: #992b83; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #71479e; }
+  background: #9076f1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #41f927; }
+  background: #0c37f3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #36c675; }
+  background: #9e8502; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #953535; }
+  background: #9d830d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #db0514; }
+  background: #829155; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7c3ba5; }
+  background: #22f2be; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #05107a; }
+  background: #c4820e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #5a5cb0; }
+  background: #93a959; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #816c85; }
+  background: #c9146b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ec34c1; }
+  background: #1e934b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e7e1a6; }
+  background: #74e64e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f2a588; }
+  background: #fe5ed8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d8099c; }
+  background: #c146d2; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1644d2; }
+  background: #0486a0; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2975dd; }
+  background: #fbac78; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11982,6 +11982,68 @@ input:checked + .sliderss .off {
   border-radius: 34px; }
 
 .sliderss.round:before {
+  border-radius: 50%; }
+
+/*NOT btn css*/
+/*AND OR BTN CSS NEW*/
+.switch-Not {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 31px;
+  margin-bottom: 0rem !important;
+  text-align: center; }
+
+.switch-Not input {
+  display: none; }
+  .switch-Not input .sliders-Not {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #776fff;
+    -webkit-transition: 0.4s;
+    transition: 0.4s; }
+  .switch-Not input input:checked + .sliders-Not {
+    background-color: #776fff; }
+  .switch-Not input input:focus + .sliders-Not {
+    box-shadow: 0 0 1px #776fff; }
+
+/*------ ADDED CSS ---------*/
+.not-white-bg {
+  display: none; }
+
+.not-white-bg,
+.not-blue-bg {
+  color: #fff;
+  background-color: #776fff;
+  border: 2px solid #776fff;
+  padding: 8px;
+  border-radius: 25px;
+  font-size: 12px;
+  font-family: Verdana, sans-serif;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-right: 10px; }
+
+input:checked + .sliders-Not .not-white-bg {
+  display: block;
+  color: #776fff;
+  background-color: #fff;
+  border: 2px solid #776fff;
+  font-size: 12px; }
+
+input:checked + .sliders-Not .not-blue-bg {
+  display: none; }
+
+/*--------- END --------*/
+/* Rounded sliders */
+.sliders-Not.round {
+  border-radius: 34px; }
+
+.sliders-Not.round:before {
   border-radius: 50%; }
 
 @media screen and (max-width: 767px) {
