new pages policy center

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1430d4; }
+  background: #2eeeab; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ebced0; }
+  background: #50ef36; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6910cd; }
+  background: #379af6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #635b90; }
+  background: #6d4006; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #db8678; }
+  background: #11eb23; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #23cd51; }
+  background: #8c8a87; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #62ce23; }
+  background: #4f95f9; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #949ee6; }
+  background: #e1f9a2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #09bcb2; }
+  background: #8cc7cd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3eb5cf; }
+  background: #7a73fd; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #36efc4; }
+  background: #b8a317; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6673fe; }
+  background: #0e89d2; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #129404; }
+  background: #8b74d7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #dd2ce9; }
+  background: #084117; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #0e2b13; }
+  background: #e3069f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #4c068e; }
+  background: #aa8f0e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f034f4; }
+  background: #4fcc8c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #123899; }
+  background: #86fc1b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8afdb4; }
+  background: #a68be2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7d1ff5; }
+  background: #a732f3; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0ffec6; }
+  background: #a80f59; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #761714; }
+  background: #181c48; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #cb9a74; }
+  background: #a22073; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #30e244; }
+  background: #6e19d6; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #7d27f1; }
+  background: #a59ffe; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #18b99d; }
+  background: #641ecd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #01f969; }
+  background: #0745a2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #606572; }
+  background: #bf0536; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e2ccaa; }
+  background: #a51ee7; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9fbc3c; }
+  background: #491353; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4a96e1; }
+  background: #db5760; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #200f7b; }
+  background: #22c4a6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #07c0d2; }
+  background: #0128ac; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #936581; }
+  background: #1b3e36; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #041694; }
+  background: #a3aa75; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #99a81d; }
+  background: #966882; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9b9ac5; }
+  background: #717a29; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fd84ee; }
+  background: #eea87e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d6d936; }
+  background: #339a34; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2d5833; }
+  background: #dc78d2; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d9686c; }
+  background: #8ccd69; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5e2667; }
+  background: #e4f9e3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5d6f8f; }
+  background: #a6e7d7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #806f23; }
+  background: #78d0f5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #75708a; }
+  background: #c7800b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f7dfaa; }
+  background: #d1fc5f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c450f0; }
+  background: #c09319; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3ac8f1; }
+  background: #e4bf09; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2524cf; }
+  background: #c78ce2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4023e5; }
+  background: #6ea403; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #964074; }
+  background: #f5ecf5; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0b03e9; }
+  background: #19966f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4b7ee1; }
+  background: #38553d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #672beb; }
+  background: #7d84ef; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #705299; }
+  background: #86cdc4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2c121c; }
+  background: #4d95fd; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fd2da0; }
+  background: #fd2bd1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #31cde9; }
+  background: #617893; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d9b602; }
+  background: #529006; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #acc0eb; }
+  background: #a02e0b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f0990b; }
+  background: #666b1b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f38228; }
+  background: #e214f2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #22398e; }
+  background: #df0acc; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b9f9c7; }
+  background: #f67821; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #6a2f70; }
+  background: #fe2411; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #dbdc8b; }
+  background: #d275a6; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e21ea1; }
+  background: #187aa7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #24a1e3; }
+  background: #07239f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #463386; }
+  background: #025869; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c9d4e8; }
+  background: #97e613; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #02f473; }
+  background: #3c8f5f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #456ebd; }
+  background: #169dae; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #229096; }
+  background: #e8193b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #79a56d; }
+  background: #f2df8e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3669e5; }
+  background: #ed7dc9; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #019983; }
+  background: #77bd2b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d9c5b8; }
+  background: #3ed584; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9d4085; }
+  background: #31fd2e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f14f8a; }
+  background: #ab040e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1e3df1; }
+  background: #c595cf; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1c15d3; }
+  background: #738636; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #36a020; }
+  background: #b5895f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #299a3f; }
+  background: #a79f1d; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9cf8b2; }
+  background: #06ed79; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #992b83; }
+  background: #84b70f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9076f1; }
+  background: #47c66f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0c37f3; }
+  background: #56c349; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9e8502; }
+  background: #8bed1a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9d830d; }
+  background: #b8e4f8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #829155; }
+  background: #8858cc; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #22f2be; }
+  background: #e6c344; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c4820e; }
+  background: #42b9e4; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #93a959; }
+  background: #f75371; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c9146b; }
+  background: #e0bcc2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1e934b; }
+  background: #648e8e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #74e64e; }
+  background: #24eda8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #fe5ed8; }
+  background: #0648c1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c146d2; }
+  background: #24f079; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0486a0; }
+  background: #3b635e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #fbac78; }
+  background: #d539d6; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11232,7 +11232,8 @@ input[type="submit"] {
   vertical-align: middle !important; }
 
 .table-icons {
-  height: 18px; }
+  height: 18px;
+  vertical-align: middle; }
 
 .icon-td {
   text-align: center !important; }
@@ -12045,6 +12046,26 @@ input:checked + .sliders-Not .not-blue-bg {
 
 .sliders-Not.round:before {
   border-radius: 50%; }
+
+.device-select-div select {
+  border: 0px solid #ccc;
+  padding: 10px;
+  margin-right: 10px; }
+
+.save-queries-wrapper .search-wrap {
+  flex: 1; }
+.save-queries-wrapper img {
+  margin-right: 15px; }
+.save-queries-wrapper select {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  background-image: url(../images/select-dropdwon-icon.png);
+  background-repeat: no-repeat;
+  background-position-x: 90%;
+  background-position-y: 20px;
+  height: 45px;
+  margin-right: 13px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
